fixed css so page overflows less

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    margin: 0;
+    margin-left: 15px;
     padding: 0;
 }
 .header {
@@ -17,6 +17,7 @@ body {
 .container {
     background-color: #ac0303;
     border-radius: 15px;
+    margin-left: 0;
     margin: 50px;
     padding:20px;
     box-shadow: inset -8px 8px 5px rgba(255, 255, 255, 0.315), 5px -5px #b95050, -30px -20px 20px rgba(0, 0, 0, 0.445), inset 5px -5px 5px rgba(0, 0, 0, 0.445);
